--- a/src/index.css
+++ b/src/index.css
@@ -45,8 +45,13 @@ h1 {
     color: #1B1B1B;
 }
 
-h4 {
+h3 {
     font: 18px Lufga, sans-serif;
+    color: #1B1B1B;
+}
+
+h4 {
+    font: 16px Lufga, sans-serif;
     color: #1B1B1B;
 }
 
@@ -95,6 +100,7 @@ label {
     display: flex;
     flex-direction: row;
     gap: 12px;
+
     height: 100%;
 }
 
@@ -102,6 +108,19 @@ label {
     font-size: 30px;
     color: #1B1B1B;
     border-radius: 3px;
+
+    user-select: none; /* Standard property */
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+}
+
+.small-icon {
+    font-size: 16px;
+    font-weight: bold;
+    color: #1B1B1B;
+    border-radius: 3px;
+    line-height: 1.3;
 
     user-select: none; /* Standard property */
     -webkit-user-select: none; /* Safari */
@@ -164,3 +183,28 @@ select {
     -webkit-user-drag: none; /* For Safari and Chrome */
     user-drag: none;
 }
+
+/* For WebKit browsers */
+::-webkit-scrollbar {
+    width: 8px;         /* Slim scrollbar width */
+    height: 8px;        /* Slim scrollbar height for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #b8b8b8; /* Color of the scrollbar thumb */
+    border-radius: 10px;   /* Rounded corners for the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #9f9f9f; /* Darker color when hovering over the scrollbar thumb */
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;   /* Color of the track (background of the scrollbar) */
+    border-radius: 10px;  /* Rounded corners for the track */
+}
+
+::-webkit-scrollbar-corner {
+    background: transparent; /* Transparent corner where two scrollbars intersect */
+}
+
